# toxhub-python

./: .gitignore  LICENSE  README.md  setup.cfg
src/toxhub/: auth.py  chemistryservice.py  dataclass.py  datasource.py  primitiveadaptor.py  query.py  semanticservice.py  similarityservice.py  toxhub.py
tests/: test_integration.py  test_omeprazole_use_case.py  test_query.py  test_semantic_service.py  test_simsrv.py
