[metadata]
name = toxhub
version = 1.0.9
author = Erik M. van Mulligen and Rowan Parry
author_email = rowan.parry@live.com
description = Interface to the eTransafe ToxHub
long_description = file: README.md
long_description_content_type = text/markdown
url = https://etransafe.eu
project_urls =
    Bug Tracker = https://etransafe.eu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    requests

[options.packages.find]
where = src
